# biped

./: CMakeLists.txt  test.cpp
protocol/: CMakeLists.txt
protocol/lib/: CMakeLists.txt
protocol/src/: CMakeLists.txt  index.cpp-txt  main.cpp  modules.cpp  notes
protocol/src/classes/: Ankle.cpp  Ankle.h  Arm.cpp  Arm.h  Hip.cpp  Hip.h  Knee.cpp  Knee.h  Leg.cpp  Leg.h
